--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -10,7 +10,7 @@
     <header id="dashboard">
         <h1><b>VIRTUAL MACHINE</b> AUDIT</h1>
         <hr>
-        Virtual Machine Audit Insights Dashboard and AI Usage Predictor
+        Virtual Machine Audit Dashboard and AI Usage Predictor
         <hr>
         <iframe title="vmaudit - Page 1" width="100%" height="100%"
             src="https://app.powerbi.com/view?r=eyJrIjoiOWVkMjc1NDYtM2FjMi00OGM4LThmOTMtMmZiNTcxOWUwNmU5IiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
