--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -10,7 +10,7 @@
     <header id="dashboard">
         <h1><b>CLOUD</b> AUDIT</h1>
         <hr>
-        Cloud Audit Insights Dashboard and AI Usage Predictor
+        Cloud Audit Dashboard and AI Usage Predictor
         <hr>
         <iframe title="cloudaudit - Page 1" width="100%" height="100%"
             src="https://app.powerbi.com/view?r=eyJrIjoiZjdjNDQ5NTEtYTlhMC00ODc1LTg5NGMtYTRkMTAwNDZjOTRjIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
