--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
                     Cenitex | 2012 - Present
                 </p>
                 <ul>
-                    <li>Analysed the current cost model for Azure cloud resources by performing EDA with visualization.
-                        Total reduction approx. $15k per annum. (<a href="https://lyoh001.com/mlvmaudit"><b>project
+                    <li>Analysed the current cost model of cloud resources with Power BI dashboard and deployed
+                        AI model to the cloud for predicting the future consumption using LSTM, Tensorflow, ScikitLearn,
+                        Pandas, Numpy, Matplotlib and Seaborn saving over $500k per annum. (<a
+                            href="https://lyoh001.com/mlvmaudit"><b>project
                                 link</b></a>)
                     </li>
-                    <li>Helped business building one stop shop dashboard for forecasting pricing and analysing
-                        security vulnerabilities by using LSTM time series, Tensorflow, Pandas and Matplotlib saving
-                        over $500k per annum. (<a href="https://lyoh001.com/mlcloudaudit"><b>project link</b></a>)
+                    <li>Helped business building Power BI dashboard for cloud security vulnerabilities and predict
+                        cost for consumption saving over $150 per annum. (<a
+                            href="https://lyoh001.com/mlcloudaudit"><b>project link</b></a>)
                     </li>
                     <li>Convolutional Neural Network image classification model PoC project for identifying Covid19
                         using TensorFlow and Keras. (<a href="https://github.com/lyoh001/DLCovid19"><b>project
