--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                         cost for consumption saving over $150 per annum. (<a
                             href="https://lyoh001.com/mlcloudaudit"><b>project link</b></a>)
                     </li>
-                    <li>Convolutional Neural Network image classification model PoC project for identifying Covid19
-                        using TensorFlow and Keras. (<a href="https://github.com/lyoh001/DLCovid19"><b>project
+                    <li>Convolutional Neural Network image classification project for identifying Covid19 patients based
+                        on Xray image with TensorFlow and OpenCV. (<a href="https://lyoh001.com/mlcovid"><b>project
                                 link</b></a>)
                     </li>
                 </ul>
