--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -97,9 +97,11 @@
             </section>
             <section>
                 <h2>PROBLEM STATEMENT</h2>
-                <p>Helped business building one stop shop cloud dashboard for forecasting pricing and analysing security
-                    vulnerabilities by using LSTM time series, Tensorflow, Pandas and Matplotlib saving over $500k per
-                    annum.
+                <p>There was a requirement from the business to further remediate cloud security vulnerabilities
+                    identified during the audit and reduce the consumption of resource utilizations.
+
+                    I have addressed the requirement by building Power BI dashboard for cloud security vulnerabilities
+                    and predict cost for consumption saving over $150 per annum.
                 </p>
             </section>
         </article>
