--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -99,14 +99,13 @@
             </section>
             <section>
                 <h2>PROBLEM STATEMENT</h2>
-                <p>There is a requirement from the business to further analyse the current cost model of Azure resources
-                    and potentially purchase Azure reserved instances.
+                <p>There was a requirement from the business to further analyse the current cost model of cloud
+                    resources not only for auditing purpose but also to reduce the consumption by optimizing license
+                    scheme and resource utilizations.
 
-                    This document is intended to provide a high level overview of workflow on how the automation fetches
-                    payload in JSON via API and converts them into consumable data format for further analysis activity.
-
-                    Included a step by step detailed analysis notebook around discovering and exploring the current
-                    consumption pattern.
+                    I have addressed the requirement by analysing the current cost model of cloud resources with Power
+                    BI dashboard and deployed AI model to the cloud for predicting the future consumption using LSTM,
+                    Tensorflow, ScikitLearn, Pandas, Numpy, Matplotlib and Seaborn saving over $500k per annum.
                 </p>
             </section>
         </article>
