--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <b>The University of Auckland</b>
                 <p>
-                    Bachelor of Science (BSc), Computer Science
+                    Bachelor of Science, Computer Science (Artificial Intelligence)
                 </p>
             </section>
             <section>
