--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -98,7 +98,7 @@
                     <button
                         onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
                 </ol>
-                <p>Prediction: <b style="color:#BCF9FE" id="prediction">...</b></p>
+                <p>Radiology Report: <b style="color:#BCF9FE" id="prediction">...</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
