--- a/index.html
+++ b/index.html
@@ -12,108 +12,10 @@
         <hr>
         MACHINE LEARNING | DEVOPS ENGINEER
         <hr>
+        <iframe title="resume - Page 1" width="100%" height="100%"
+            src="https://app.powerbi.com/view?r=eyJrIjoiODY3OGM0M2UtOWMxNy00OWFjLWFkNzYtMTdlNTNkNjY3YTNlIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
+            frameborder="0" allowFullScreen="true"></iframe>
     </header>
-    <main>
-        <article id="mainLeft">
-            <section>
-                <h2>EDUCATION</h2>
-                <b>Amazon Web Services (AWS)</b>
-                <p>
-                    Certified Solutions Architect - Associate
-                </p>
-                <b>Microsoft (MCSE)</b>
-                <p>
-                    Cloud Platform and Infrastructure Certification
-                </p>
-                <b>The University of Auckland</b>
-                <p>
-                    Bachelor of Science, Computer Science (Artificial Intelligence)
-                </p>
-            </section>
-            <section>
-                <h2>SKILLS</h2>
-                <p>Python, Machine Learning, Deep Learning, DevOps, MLOps, AWS, Azure, Power BI, SQL, IaC</p>
-            </section>
-            <section>
-                <h2>CONTACT</h2>
-                <p>
-                    <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001">github.com/lyoh001</a>
-                </p>
-                <p>
-                    <i class="fab fa-linkedin" aria-hidden="true"></i>
-                    <a href="https://linkedin.com/in/lyoh001">linkedin.com/in/lyoh001</a>
-                </p>
-                <p>
-                    <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://lyoh001.com">lyoh001.com</a>
-                </p>
-                <p>
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <a href="mailto:lyoh001@hotmail.com">lyoh001@hotmail.com</a>
-                </p>
-            </section>
-        </article>
-        <article id="mainRight">
-            <section>
-                <h2>ABOUT</h2>
-                <p>Proven IT Professional with 10+ years of experience in project and operations.
-                    Possess widespread, progressive experience in the IT industry, focusing on business analysis,
-                    design, development, implementation and migration of large-scale business transformation projects.
-                    Impeccable knowledge for initiating applications with Data Analysis, Machine Learning, Deep
-                    Learning, and DevOps.</p>
-            </section>
-            <section>
-                <h2>WORK EXPERIENCE</h2>
-                <h3><b>TECHNICAL SPECIALIST</b></h3>
-                <p>
-                    Cenitex | 2012 - Present
-                </p>
-                <ul>
-                    <li>Analysed the current cost model of cloud resources with Power BI dashboard and deployed
-                        AI model to the cloud for predicting the future consumption using LSTM, Tensorflow, ScikitLearn,
-                        Pandas, Numpy, Matplotlib and Seaborn saving over $500k per annum. (<a
-                            href="https://lyoh001.com/mlvmaudit"><b>project
-                                link</b></a>)
-                    </li>
-                    <li>Helped business building Power BI dashboard for cloud security vulnerabilities and predict
-                        cost for consumption saving over $150 per annum. (<a
-                            href="https://lyoh001.com/mlcloudaudit"><b>project link</b></a>)
-                    </li>
-                    <li>Convolutional Neural Network image classification project for identifying Covid19 patients based
-                        on Xray image with TensorFlow and OpenCV. (<a href="https://lyoh001.com/mlcovid"><b>project
-                                link</b></a>)
-                    </li>
-                </ul>
-                <h3><b>POWER BI PROJECT CHALLENGE</b></h3>
-                <p>
-                    Codebasics | 2022
-                </p>
-                <ul>
-                    <li>Telecom Revenue Prediction: End to end project development covering EDA, Feature
-                        Engineering, Power BI, Training Machine Learning & Artificial Neural Network
-                        Models, App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://lyoh001.com/mltelecom"><b>project link</b></a>)
-                    </li>
-                    <li>Supply Chain Prediction: End to end project development covering EDA, Feature
-                        Engineering, Power BI, Training Machine Learning & Artificial Neural Network
-                        Models, App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://lyoh001.com/mlsupplychain"><b>project link</b></a>)
-                    </li>
-                </ul>
-                <h3><b>MACHINE LEARNING ENGINEER</b></h3>
-                <p>
-                    Omdena | 2022 - Present
-                </p>
-                <ul>
-                    <li>Maternal Mortality Prediction: End to end project development covering EDA,
-                        Feature Engineering, Power BI, Training Machine Learning & Artificial Neural
-                        Network Models, App Deployment via CICD pipeline to the cloud.
-                    </li>
-                </ul>
-            </section>
-        </article>
-    </main>
 </body>
 
 </html>
