--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -1,19 +1,19 @@
 <html>
 
 <head>
-    <link href="/mlmobileuurka/styles.css" rel="stylesheet">
+    <link href="/maternalmortality/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Mobile Uurka</title>
+    <title>Maternal Mortality</title>
 </head>
 
 <body>
     <header id="dashboard">
-        <h1><b>MOBILE</b> UURKA</h1>
+        <h1><b>MATERNAL</b> MORTALITY</h1>
         <hr>
         Maternal Mortality Dashboard and AI Risk Prediction
         <hr>
-        <iframe title="mobileuurka - Page 1" width="100%" height="100%"
-            src="https://app.powerbi.com/view?r=eyJrIjoiZDIwMzAxNjQtNGNkOC00ZTI1LTkxZTgtMzE2YzVkZDBkODRiIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
+        <iframe title="maternalmortality - Page 1" width="100%" height="100%"
+            src="https://app.powerbi.com/view?r=eyJrIjoiMWU2ZTBmMjUtMDc3Yy00MDMyLTg2ZGYtMjhhMjJlYjBjNTQ4IiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
     </header>
     <main>
@@ -71,7 +71,7 @@
             <section>
                 <h2>AI RISK PREDICTION</h2>
                 <p>
-                    Please populate the input fields listed below and click predict to continue.
+                    Please populate the patient's metrics listed below and click predict to continue.
                 </p>
                 <ol>
                     <li><label for="feature1">Age (10-70)</label></li>
