--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -12,7 +12,7 @@
         <hr>
         Covid Xray AI Detection System powered by Convolutional Neural Network
         <hr>
-        <img src="/mlcovid/covid.jpg" height="65%" width="100%">
+        <img src="/mlcovid/banner.jpg" height="80%" width="100%">
     </header>
     <main>
         <article id="mainLeft">
@@ -77,7 +77,7 @@
                     Please select one of the xray images below and click predict to continue.
                 </p>
                 <ol>
-                    <li><label for="feature1">Xray Image (1-30)</label></li>
+                    <li><label for="feature1">Xray Images (1-30)</label></li>
                     <div class="slider">
                         <input type="range" min="1" max="30" value="1" step="1" class="slider" id="feature1">
                         <p>Image ID: <span id="feature1_output"></span></p>
@@ -98,7 +98,7 @@
                     <button
                         onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
                 </ol>
-                <p>Radiology Report: <b style="color:#BCF9FE" id="prediction">...</b></p>
+                <p>Radiology Report: <b style="color:#369A99" id="prediction">...</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
