--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -12,7 +12,7 @@
         <hr>
         Covid Xray AI Detection System powered by Convolutional Neural Network
         <hr>
-        <img src="/mlcovid/banner.jpg" height="80%" width="100%">
+        <img src="/mlcovid/banner.png" height="80%" width="100%">
     </header>
     <main>
         <article id="mainLeft">
