--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -172,7 +172,7 @@
                         var feature5 = document.getElementById("feature5").value;
                         var feature6 = document.getElementById("feature6").value;
                         var http = new XMLHttpRequest();
-                        http.open("POST", "api/mlmobileuurka", true);
+                        http.open("POST", "api/mlmaternalmortality", true);
                         http.setRequestHeader("Content-Type", "application/json");
                         http.onreadystatechange = function () {
                             if (http.readyState == 4 && http.status == 200) {
