--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -12,7 +12,6 @@
         <hr>
         Covid Xray AI Detection System powered by Convolutional Neural Network
         <hr>
-        <img src="/mlcovid/banner.png" height="80%" width="100%">
     </header>
     <main>
         <article id="mainLeft">
@@ -72,6 +71,19 @@
         </article>
         <article id="mainRight">
             <section>
+                <h2>PROBLEM STATEMENT</h2>
+                <p>COVID-19 is confirmed using PCR and can present on chest X-rays and CT images with a moderate
+                    characteristic pattern. The rate of transmission depends on the ability to identify infected
+                    patients with low rates of false negatives and false positives. Timely detection and proper
+                    infection control are crucial for supporting patients. A Chinese team found that patients show
+                    abnormalities on chest CT images, with most having bilateral involvement. ICU patients typically
+                    have bilateral lobular and subsegmental areas of consolidation on admission, while non-ICU patients
+                    have bilateral ground-glass opacity and subsegmental areas of consolidation. Later CT images of
+                    non-ICU patients display bilateral ground-glass opacity with resolved consolidation. COVID-19 is
+                    possibly better diagnosed using radiological imaging.
+                </p>
+            </section>
+            <section>
                 <h2>COVID XRAY AI DETECTION</h2>
                 <p>
                     Please select one of the xray images below and click predict to continue.
@@ -98,7 +110,7 @@
                     <button
                         onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
                 </ol>
-                <p>Radiology Report: <b style="color:#369A99" id="prediction">...</b></p>
+                <p>Radiology Report: <b style="color:#AA5EFF" id="prediction">...</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
@@ -114,29 +126,6 @@
                         http.send(JSON.stringify({ "image_id": [feature1] }));
                     }
                 </script>
-            </section>
-            <section>
-                <h2>PROBLEM STATEMENT</h2>
-                <p>The 2019 novel coronavirus (COVID-19) presents several unique features. While the diagnosis is
-                    confirmed using polymerase chain reaction (PCR), infected patients with pneumonia may present on
-                    chest X-ray and computed tomography (CT) images with a pattern that is only moderately
-                    characteristic for the human eye Ng, 2020. COVID-19's rate of transmission depends on our capacity
-                    to reliably identify infected patients with a low rate of false negatives. In addition, a low rate
-                    of false positives is required to avoid further increasing the burden on the healthcare system by
-                    unnecessarily exposing patients to quarantine if that is not required. Along with proper infection
-                    control, it is evident that timely detection of the disease would enable the implementation of all
-                    the supportive care required by patients affected by COVID-19.
-
-                    In late January, a Chinese team published a paper detailing the clinical and paraclinical features
-                    of COVID-19. They reported that patients present abnormalities in chest CT images with most having
-                    bilateral involvement Huang 2020. Bilateral multiple lobular and subsegmental areas of consolidation
-                    constitute the typical findings in chest CT images of intensive care unit (ICU) patients on
-                    admission Huang 2020. In comparison, non-ICU patients show bilateral ground-glass opacity and
-                    subsegmental areas of consolidation in their chest CT images Huang 2020. In these patients, later
-                    chest CT images display bilateral ground-glass opacity with resolved consolidation Huang 2020.
-
-                    COVID is possibly better diagnosed using radiological imaging Fang, 2020 and Ai 2020.
-                </p>
             </section>
         </article>
     </main>
