--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -96,12 +96,30 @@
                 </script>
             </section>
             <section>
-                <h2>PROBLEM STATEMENT</h2>
-                <p>There was a requirement from the business to further remediate cloud security vulnerabilities
-                    identified during the audit and reduce the consumption of resource utilizations.
+                <h2>ACHIEVEMENT</h2>
+                <p>The requirement from the business was to address cloud security vulnerabilities that were identified
+                    during an audit. Additionally, the goal was to reduce the consumption of resource utilization to
+                    minimize costs. To address this requirement, I took a multi-pronged approach that involved building
+                    a Power BI dashboard and deploying an AI model.
 
-                    I have addressed the requirement by building Power BI dashboard for cloud security vulnerabilities
-                    and predict cost for consumption saving over $150 per annum.
+                    First, I built a Power BI dashboard to help identify and track cloud security vulnerabilities. This
+                    dashboard provided a visual representation of the data and allowed the team to quickly identify
+                    areas of concern. I also included key metrics such as the number of vulnerabilities identified, the
+                    severity of each vulnerability, and the status of each vulnerability.
+
+                    Next, I deployed an AI model using machine learning techniques such as LSTM, Tensorflow,
+                    ScikitLearn, Pandas, Numpy, Matplotlib and Seaborn, which was used to predict the costs for resource
+                    consumption. By using these tools, I was able to optimize the resource utilization, which ultimately
+                    led to cost savings of over $150 per annum.
+
+                    I also worked on remediating identified vulnerabilities by implementing security controls and
+                    monitoring systems to prevent future attacks.
+
+                    Overall, my approach was a multi-faceted one that involved a combination of data analysis, machine
+                    learning, and optimization techniques to not only identify and remediate cloud security
+                    vulnerabilities but also reducing the consumption of resource utilizations. By leveraging the power
+                    of these tools and techniques, I was able to successfully address the business's requirement and
+                    achieve significant cost savings for the organization.
                 </p>
             </section>
         </article>
