--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -98,14 +98,25 @@
                 </script>
             </section>
             <section>
-                <h2>PROBLEM STATEMENT</h2>
-                <p>There was a requirement from the business to further analyse the current cost model of cloud
-                    resources not only for auditing purpose but also to reduce the consumption by optimizing license
-                    scheme and resource utilizations.
+                <h2>ACHIEVEMENT</h2>
+                <p>The requirement from the business was to conduct a more in-depth analysis of the current cost model
+                    of cloud resources in order to achieve a number of objectives. These objectives included not only
+                    auditing the current costs, but also identifying ways to optimize the license scheme and resource
+                    utilization in order to reduce overall consumption.
 
-                    I have addressed the requirement by analysing the current cost model of cloud resources with Power
-                    BI dashboard and deployed AI model to the cloud for predicting the future consumption using LSTM,
-                    Tensorflow, ScikitLearn, Pandas, Numpy, Matplotlib and Seaborn saving over $500k per annum.
+                    To address this requirement, I employed a number of different tools and techniques. First, I used a
+                    Power BI dashboard to analyze the current cost model of cloud resources. This provided a visual
+                    representation of the data and allowed me to easily identify areas where costs could be reduced.
+
+                    Next, I deployed an AI model to the cloud using LSTM, Tensorflow, ScikitLearn, Pandas, Numpy,
+                    Matplotlib and Seaborn. This model was used to predict future consumption and identify potential
+                    cost savings. By using these tools, I was able to optimize the license scheme and resource
+                    utilization, which ultimately led to cost savings of over $500k per annum.
+
+                    Overall, my approach was a multi-faceted one that involved a combination of data analysis, machine
+                    learning, and optimization techniques. By leveraging the power of these tools and techniques, I was
+                    able to successfully address the business's requirement and achieve significant cost savings for the
+                    organization.
                 </p>
             </section>
         </article>
