--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -36,14 +36,6 @@
                 </p>
             </section>
             <section>
-                <h2>PROJECT</h2>
-                <p>
-                    <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://omdena.com/projects/ai-maternal-care/">Omdena Project</a>
-                </p>
-                <p></p>
-            </section>
-            <section>
                 <h2>SKILLS</h2>
                 <p>Python, Machine Learning, Deep Learning, DevOps, MLOps, AWS, Azure, Power BI, SQL, IaC</p>
             </section>
@@ -186,29 +178,23 @@
             </section>
             <section>
                 <h2>PROBLEM STATEMENT</h2>
-                <p>Approximately 70% of all maternal mortality cases in the world occur in Sub-Saharan Africa countries
-                    because of unequally despaired, under-resourced healthcare settings and low numbers of skilled
-                    healthcare workers.
-
-                    Somalia has the 6th highest MMR worldwide, with 1 in 18 dying from pregnancy-related complications.
-                    Unfortunately, most of these complications could have been easily cured, avoided, or managed.
-
-                    The technology nowadays allows for remote tracking of women's health status, which is vital since
-                    70% of the population lives outside urban areas with low or no access to healthcare facilities. The
-                    urgency for the technology is high because the average age in Somalia is 17 years, and the typical
-                    childbearing age is between 15 and 45, implying that there will be an exponential increase in
-                    pregnancies over the next three decades. In the next two years, the need will increase by 25%, but
-                    the shortage of healthcare workers remains.
+                <p>The strongest indications for health risks during pregnancy can vary, but some common conditions that
+                    can increase the risk of complications include hypertension, diabetes, obesity, heart disease,
+                    autoimmune disorders, and certain infections such as HIV or syphilis. Additionally, certain
+                    lifestyle factors, such as smoking or alcohol consumption, can also increase the risk of
+                    complications during pregnancy.
+                    It's important to note that early and regular prenatal care can help identify and manage potential
+                    health risks during pregnancy and improve outcomes for both the mother and baby.
                 </p>
             </section>
             <section>
-                <h2>PROJECT GOALS</h2>
-                <p>The AI solution that will be built will let a person send her matrix of data (related to personal
-                    health) and the AI solution will predict the potential health hazards the person may encounter
-                    during pregnancy. The goal of such an AI system will be to reduce maternal mortality.
-
-                    Optionally, the AI challenge may also build an end-to-end tool that will let a person upload her
-                    data via the tool and the person can see the outcome from the AI model.
+                <h2>ACKNOWLEDGEMENTS</h2>
+                <p>Relevant Papers:
+                    Ahmed M., Kashem M.A., Rahman M., Khatun S. (2020) Review and Analysis of Risk Factor of Maternal
+                    Health in Remote Area Using the Internet of Things (IoT). In: Kasruddin Nasir A. et al. (eds)
+                    InECCE2019. Lecture Notes in Electrical Engineering, vol 632. Springer, Singapore. [Web Link]
+                    IoT based Risk Level Prediction Model for Maternal Health Care in the Context of Bangladesh,
+                    STI-2020, [under publication in IEEE]
                 </p>
             </section>
         </article>
