--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -20,12 +20,13 @@
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
-                        href="https://github.com/lyoh001/AzureFunctions/blob/main/mlcovid/notebook/notebook_mobilenet_v2.ipynb">Mobilenet_v2
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcovid/notebook/notebook_mobilenet_v2.ipynb">Mobilenet_v2
                         Classification Analysis</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions/blob/main/mlcovid/notebook/notebook_cnn.ipynb">CNN
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcovid/notebook/notebook_cnn.ipynb">CNN
                         Classification Analysis</a>
                 </p>
             </section>
