--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -22,7 +22,8 @@
                 <h2>NOTEBOOK</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions/blob/main/mlmobileuurka/notebook/notebook.ipynb">Risk
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmobileuurka/notebook/notebook.ipynb">Risk
                         Level
                         Prediction Analysis</a>
                 </p>
