--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -22,7 +22,8 @@
                 <h2>NOTEBOOK</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions/blob/main/mlcloudaudit/notebook/notebook.ipynb">
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb">
                         Cloud Usage Prediction Analysis</a>
                 </p>
                 <p>
