--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
                     dashboard provides a visual representation of the data, allowing the team to quickly identify areas
                     of concern. (<a href="https://github.com/lyoh001/AzureSecurityScore"><b>View Code</b></a>)
                 </p>
+                <p><img src="https://raw.githubusercontent.com/lyoh001/AzureSecurityScore/main/images/powerbireport.png"
+                        width="600" height="300"></p>
                 <p><a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a> <a
                         href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a><a
                         href="#"><img src="https://img.shields.io/badge/microsoft-azure-black?logo=microsoft-azure"
