--- a/index.html
+++ b/index.html
@@ -205,19 +205,18 @@
                     <a href="https://github.com/lyoh001/AzureBill"><b>View Code</b></a>
                 </p>
             </section>
-            <section>
-                <footer>
-                    <ul class="social-links">
-                        <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a>
-                        <li><a href="https://lyoh001.com"><i class="fa fa-home"></i></a></li>
-                        <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
-                        </li>
-                    </ul>
-                </footer>
-            </section>
         </article>
     </main>
+    <footer id="footer">
+        <hr>
+        <ul class="social">
+            <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a>
+            <li><a href="https://lyoh001.com"><i class="fa fa-home"></i></a></li>
+            <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
