--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -19,7 +19,7 @@
     <main>
         <article id="mainLeft">
             <section>
-                <h2>NOTEBOOK</h2>
+                <h2>CODE</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
@@ -38,7 +38,7 @@
                 </p>
             </section>
             <section>
-                <h2>ARCHITECTURE DESIGN</h2>
+                <h2>DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a href="https://github.com/lyoh001/AzureFunctions">Azure Static Web Apps with Function Integration
@@ -52,29 +52,6 @@
                     <a href="https://codebasics.io/event/codebasics-resume-project-challenge">Codebasics Project</a>
                 </p>
                 <p></p>
-            </section>
-            <section>
-                <h2>SKILLS</h2>
-                <p>Python, Machine Learning, Deep Learning, DevOps, MLOps, AWS, Azure, Power BI, SQL, IaC</p>
-            </section>
-            <section>
-                <h2>CONTACT</h2>
-                <p>
-                    <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001">github.com/lyoh001</a>
-                </p>
-                <p>
-                    <i class="fab fa-linkedin" aria-hidden="true"></i>
-                    <a href="https://linkedin.com/in/lyoh001">linkedin.com/in/lyoh001</a>
-                </p>
-                <p>
-                    <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://lyoh001.com">lyoh001.com</a>
-                </p>
-                <p>
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <a href="mailto:lyoh001@hotmail.com">lyoh001@hotmail.com</a>
-                </p>
             </section>
         </article>
         <article id="mainRight">
@@ -216,6 +193,15 @@
             </section>
         </article>
     </main>
+    <footer id="footer">
+        <hr>
+        <ul class="social">
+            <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://lyoh001.com"><i class="fa fa-home"></i></a></li>
+            <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
