--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="header">
         <h1><b>JOHN </b>YOHAN LEE</h1>
         <hr>
-        Selected Projects in Data Science, Machine Learning and NLP
+        Projects in Data Science, Machine Learning and NLP
         <hr>
     </header>
     <main>
