--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     SpaCy.
                     The data were aggregated and visualized with Pandas, Matplotlib and Word Cloud to compile a
                     professional report.
-                    The final Deep Learning classifier model was fine-tuned using BERT, achieving an accuracy of 82%.
+                    The final Deep Learning classifier model was fine-tuned using Keras-Tuner, achieving an accuracy of
+                    71%.
                 </p>
                 <p><a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a> <a
                         href="#"><img src="https://img.shields.io/badge/jupyter-black?logo=jupyter" alt="" /></a> <a
@@ -32,7 +33,9 @@
                     <a href="#"><img src="https://img.shields.io/badge/twitter-black?logo=twitter" alt="" /></a>
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001"><b>View Code</b></a>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlhatespeech/notebook/notebook.ipynb"><b>View
+                            Code</b></a>
                 </p>
             </section>
             <section>
