--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/cnn.png" width="800" height="500"></p>
+                <p><img src="images/cnn.png" width="800" height="300"></p>
+                <p><img src="images/cnn_prediction.png" width="800" height="320"></p>
             </section>
             <section>
                 <h3><b>ANN (Regression): Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
