--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
             <section>
                 <h3><b>NLP for Hate Speech Detection</b></h3>
                 <p>
-                    Developed a hate speech detection system using NLP, with preprocessing performed using Regex and
-                    SpaCy.
-                    The data were aggregated and visualized with Pandas, Matplotlib and Word Cloud to compile a
-                    professional report.
-                    The final Deep Learning classifier model was fine-tuned using Keras-Tuner, achieving an accuracy of
-                    73%.
+                    Developed a hate speech detection system using NLP, which involved preprocessing using Regex, NLTK,
+                    Gensim, and SpaCy. The data was aggregated and visualized using Pandas, Matplotlib, and Word Cloud
+                    to compile a professional report. The words were tokenized using BOW, TF-IDF, and Glove, and the
+                    model was fine-tuned using LSTM, Bidirectional LSTM, and BERT.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-black?logo=python" alt="" /></a>
