--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>
                     Developed a hate speech detection system using NLP, which involved preprocessing using Regex, NLTK,
                     Gensim, and SpaCy. The data was aggregated and visualized using Pandas, Matplotlib, and Word Cloud
-                    to compile a professional report. The words were tokenized using BOW, TF-IDF, and Glove, and the
+                    to compile a professional report. The words were tokenized using BoW, TF-IDF, and GloVe, and the
                     model was fine-tuned using LSTM, Bidirectional LSTM, and BERT.
                 </p>
                 <p>
