--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -18,8 +18,8 @@
                     document.getElementById("prediction").innerHTML = response;
                 }
             }
-            http.send();
-            // http.send(JSON.stringify({ "data": "load" }));
+            // http.send();
+            http.send(JSON.stringify({ "data": "load" }));
         }
     </script>
     <header id="dashboard">
