--- a/mlcoffeeplantdiseases/index.html
+++ b/mlcoffeeplantdiseases/index.html
@@ -6,7 +6,21 @@
     <title>Coffee Plant Diseases</title>
 </head>
 
-<body>
+<body onload="load()">
+    <script>
+        function load() {
+            var http = new XMLHttpRequest();
+            http.open("POST", "api/mlload", true);
+            http.setRequestHeader("Content-Type", "application/json");
+            http.onreadystatechange = function () {
+                if (http.readyState == 4 && http.status == 200) {
+                    var response = http.responseText
+                    document.getElementById("prediction").innerHTML = response;
+                }
+            }
+            http.send(JSON.stringify({ "data": "load" }));
+        }
+    </script>
     <header id="dashboard">
         <h1><b>COFFEE PLANT</b> DISEASES</h1>
         <hr>
