--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -6,7 +6,21 @@
     <title>Covid Xray</title>
 </head>
 
-<body>
+<body onload="load()">
+    <script>
+        function load() {
+            var http = new XMLHttpRequest();
+            http.open("POST", "api/mlload", true);
+            http.setRequestHeader("Content-Type", "application/json");
+            http.onreadystatechange = function () {
+                if (http.readyState == 4 && http.status == 200) {
+                    var response = http.responseText
+                    document.getElementById("prediction").innerHTML = response;
+                }
+            }
+            http.send(JSON.stringify({ "data": "load" }));
+        }
+    </script>
     <header id="dashboard">
         <h1><b>COVID</b> XRAY</h1>
         <hr>
