--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -13,8 +13,10 @@
             http.open("POST", "api/mlload", true);
             http.setRequestHeader("Content-Type", "application/json");
             http.onreadystatechange = function () {
-                var response = http.responseText
-                document.getElementById("prediction").innerHTML = response;
+                if (http.readyState == 4 && http.status == 200) {
+                    var response = http.responseText
+                    document.getElementById("prediction").innerHTML = response;
+                }
             }
             http.send(JSON.stringify({ "data": "load" }));
         }
