--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -14,7 +14,7 @@
             http.setRequestHeader("Content-Type", "application/json");
             http.onreadystatechange = function () {
                 var response = http.responseText
-                document.getElementById("prediction").innerHTML = response;
+                document.getElementById("prediction").innerHTML = "ready";
             }
             http.send(JSON.stringify({ "data": "load" }));
         }
