--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -66,9 +66,10 @@
                     <li><input id="feature1" type="month" value="2023-01" min="2023-01" max="2023-04">
                     </li>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. May take up to 10 seconds. Please wait.'; predict();">predict</button>
                 </ol>
-                <p>Monthly Cloud Usage Prediction: <b style="color:#E85D04" id="prediction">...</b></p>
+                <p>Monthly Cloud Usage Prediction: <b style="color:#E85D04" id="prediction">Initializing AI. Please
+                        wait.</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
