--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -98,9 +98,9 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. May take up to 10 seconds. Please wait.'; predict();">predict</button>
                 </ol>
-                <p>Radiology Report: <b style="color:#AA5EFF" id="prediction">...</b></p>
+                <p>Radiology Report: <b style="color:#AA5EFF" id="prediction">Initializing AI. Please wait.</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
