--- a/mlcoffeeplantdiseases/index.html
+++ b/mlcoffeeplantdiseases/index.html
@@ -81,9 +81,10 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. May take up to 10 seconds. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
                 </ol>
-                <p>Prediction: <b style="color:#DDB892" id="prediction">Initializing AI. Please wait.</b></p>
+                <p>Prediction: <b style="color:#DDB892" id="prediction">Initializing AI. May take up to 30 seconds.
+                        Please wait.</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
