--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -142,9 +142,10 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. May take up to 10 seconds. Please wait.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Predicting. Please wait.'; predict();">predict</button>
                 </ol>
-                <p>Patient Risk Prediction: <b style="color:#1DD3B0" id="prediction">Initializing AI. Please wait.</b>
+                <p>Patient Risk Prediction: <b style="color:#1DD3B0" id="prediction">Initializing AI. May take up to 30
+                        seconds. Please wait.</b>
                 </p>
                 <script>
                     function predict() {
